Fix options cutoff

--- a/src/Components/SelectChamp/selectchamp.css
+++ b/src/Components/SelectChamp/selectchamp.css
@@ -25,14 +25,14 @@
     background-color: rgb(3, 58, 58);
     position: absolute;
     width: 100%;
-    max-height: 80%;
+    max-height: 400%;
     overflow-y: auto;
     top: 0%;
     display: flex;
     flex-direction: column;
-    max-height: 200px;
-    align-items: flex-start;
-    justify-content: center;
     transform: translateY(-100%); /* Added */
 }
 
+.optul {
+    list-style: none;
+}
